--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -33,11 +33,11 @@
         "permission_denied_not_in_private_chat": "此命令只能在私人聊天中使用。",
         "permission_denied_not_member": "您不在此群組/頻道中，因此無法使用該機器人。",
         "permission_denied_bot_not_member": "該機器人不再在此群組/頻道中，因此不會在這里工作。",
-        "promote_to_admin_prompt": "如果您是該群組的匿名管理員，請將機器人提升為管理員 (無需權限)，以授權機器人驗證您的身份。",
-        "group_upgrade_needed_prompt": "糟糕，您的群組尚未升級為超級群組。通常，Telegram 伺服器應在某個時候自動執行此升級，但如果沒有，則必須手動升級它，然後才能使用機器人。\n請按照以下步驟操作：\n1. 轉到群組資訊，然後按兩下「管理組」\n2. 將「新成員的聊天記錄」更改為「可見」\n3. 保存聊天記錄可見性設置\n4. 保存所有設置\n5. (可選) 如果需要，您可以再次將「新成員的聊天記錄」更改為「隱藏」\n6. 現在您應該能夠使用機器人了",
         "permission_denied_switch_pm": "在與機器人的私人聊天中繼續…",
         "permission_denied_input_command": "請輸入命令以繼續…",
-        "permission_denied_no_direct_use": "不應直接使用此命令。請改用 /set。"
+        "permission_denied_no_direct_use": "不應直接使用此命令。請改用 /set。",
+        "promote_to_admin_prompt": "如果您是該群組的匿名管理員，請將機器人提升為管理員 (無需權限)，以授權機器人驗證您的身份。",
+        "group_upgrade_needed_prompt": "糟糕，您的群組尚未升級為超級群組。通常，Telegram 伺服器應在某個時候自動執行此升級，但如果沒有，則必須手動升級它，然後才能使用機器人。\n請按照以下步驟操作：\n1. 轉到群組資訊，然後按兩下「管理組」\n2. 將「新成員的聊天記錄」更改為「可見」\n3. 保存聊天記錄可見性設置\n4. 保存所有設置\n5. (可選) 如果需要，您可以再次將「新成員的聊天記錄」更改為「隱藏」\n6. 現在您應該能夠使用機器人了"
     },
     "l10n_misc": {
         "choose_sub_prompt": "請選擇訂閱",
@@ -51,7 +51,7 @@
         "processing": "正在處理中，請稍等片刻…",
         "canceled_by_user": "由用戶取消。",
         "n_subscriptions_in_total": "共有 %d 個訂閲",
-        "other_settings_button": "其他設定…"
+        "other_settings_button": "其他設置…"
     },
     "l10n_cmd_sub": {
         "sub_reply_feed_url_prompt_html": "請以 RSS 源的 URL 回復這條消息。\n或者，您可以使用 <code>/sub url1 url2 url3 …</code> 批量訂閱。",
@@ -88,46 +88,58 @@
         "notification_normal": "常規",
         "notification_muted": "靜音",
         "monitor_interval": "監視間隔",
-        "set_interval_prompt": "請選擇監視間隔。",
-        "send_mode_-1": "僅標題和來源",
         "send_mode": "發送方式",
+        "send_mode_-1": "僅標題和來源",
         "send_mode_0": "自動",
         "send_mode_1": "强制 Telegraph",
+        "send_mode_2": "强制 Telegram 消息",
         "length_limit": "長度限制 (僅限自動模式)",
+        "length_limit_unlimited": "無限",
         "link_preview": "鏈接預覽",
         "link_preview_0": "自動",
-        "display_via": "顯示來源",
-        "display_via_-2": "完全禁用",
-        "display_author": "顯示作者",
-        "display_author_-1": "禁用",
-        "display_author_0": "自動",
-        "set_custom_interval_button": "自定義間隔 (以分鐘為單位)…",
-        "length_limit_unlimited": "無限",
         "link_preview_1": "強制啟用",
-        "send_mode_2": "强制 Telegram 消息",
-        "display_author_1": "強制啟用",
-        "display_via_-1": "僅鏈接 (隱藏源標題)",
-        "display_via_0": "自動 (鏈接顯示為源標題)",
-        "display_title_0": "自動",
-        "display_title_1": "強制啟用",
-        "style": "樣式",
-        "display_title": "顯示標題",
-        "display_title_-1": "禁用",
-        "set_custom_title_button": "自定義標題…",
-        "set_custom_hashtags_button": "自定義 hashtag…",
-        "set_length_limit_prompt": "請選擇長度限制。\n\n如果文章的長度超過限制或無法在單個消息中發送，則將通過 Telegraph 發送。\n如果通過 Telegraph 發送失敗，則只會發送其標題和來源。",
-        "length_limit_only_effective_if_send_mode_auto": "長度限制僅在發送方式為自動時有效。",
         "display_media": "顯示媒體",
         "display_media_-1": "禁用",
         "display_media_0": "啟用",
-        "display_media_only_effective_if_send_mode_auto_and_telegram": "現在的發送方式永遠不會在 Telegram 消息中顯示媒體。"
+        "display_author": "顯示作者",
+        "display_author_-1": "禁用",
+        "display_author_0": "自動",
+        "display_author_1": "強制啟用",
+        "display_via": "顯示來源",
+        "display_via_-2": "完全禁用",
+        "display_via_-1": "僅鏈接 (隱藏源標題)",
+        "display_via_0": "自動 (鏈接顯示為源標題)",
+        "display_title": "顯示標題",
+        "display_title_-1": "禁用",
+        "display_title_0": "自動",
+        "display_title_1": "強制啟用",
+        "style": "樣式",
+        "style_0": "",
+        "style_1": "",
+        "set_custom_title_button": "自定義標題…",
+        "set_custom_interval_button": "自定義間隔 (以分鐘為單位)…",
+        "set_custom_hashtags_button": "自定義 hashtag…",
+        "set_interval_prompt": "請選擇監視間隔。",
+        "set_length_limit_prompt": "請選擇長度限制。\n\n如果文章的長度超過限制或無法在單個消息中發送，則將通過 Telegraph 發送。\n如果通過 Telegraph 發送失敗，則只會發送其標題和來源。",
+        "length_limit_only_effective_if_send_mode_auto": "長度限制僅在發送方式為自動時有效。",
+        "display_media_only_effective_if_send_mode_auto_and_telegram": "現在的發送方式永遠不會在 Telegram 消息中顯示媒體。",
+        "use_user_default_button": "使用我的預設值"
+    },
+    "l10n_cmd_set_default": {
+        "set_user_default_description": "定制訂閲的預設設置。\n\n訂閲中尚未修改過的設置會退回到本頁上的設置。如果您想對許多訂閲使用同樣的設置，這就很有用。",
+        "reset_all_button": "重設所有訂閲到預設值",
+        "reset_all_confirm_prompt": "是否確實要重設所有訂閲到預設值？",
+        "reset_all_confirm": "是，重設所有訂閲到預設值",
+        "reset_all_cancel": "否，取消",
+        "reset_all_successful": "已成功重設所有訂閲到預設值"
     },
     "l10n_sub_info": {
         "subscription_info": "訂閱資訊",
+        "feed_title": "源標題",
         "subscription_title": "自定義標題",
         "feed_url": "源 URL",
-        "feed_title": "源標題",
-        "hashtags": "Hashtag"
+        "hashtags": "Hashtag",
+        "default_emoji_header_description": "%s 意味著訂閲正使用預設的設置。您可以使用 /set_default 來改變它們。"
     },
     "l10n_monitor_warn": {
         "feed_deactivated_warn": "監視任務連續 100 次失敗。您對該 RSS 源的訂閱已停用。\n要重新啟動它，請使用 /activate_subs 命令。"
@@ -141,6 +153,23 @@
         "choose_sub_to_be_deactivated": "以下訂閱已啟動，請選擇要停用的訂閱。\n停用后，其更新將被暫停監視。如果您不再需要該訂閱，請考慮退訂而不是停用它。",
         "deactivate_all_subs": "停用我的所有訂閱",
         "all_subs_are_deactivated": "所有訂閱均已停用。"
+    },
+    "l10n_cmd_set_title": {
+        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 訂閲編號 標題</code>\n\n注: 省略 <code>標題</code> 以清除自定義標題 (僅當先前設置過才能清除，否則就會收到此提示) 。",
+        "set_title_success": "訂閱的自定義標題已修改為: ",
+        "set_title_success_cleared": "訂閱的自定義標題已清除。"
+    },
+    "l10n_cmd_set_interval": {
+        "cmd_set_interval_usage_prompt_html": "命令用法: <code>/set_interval 訂閲編號 監視間隔</code>\n\n注: <code>監視間隔</code> 必須是正整數，單位為分鐘 (無需包含單位) 。",
+        "set_interval_success_html": "訂閱的監視間隔已修改為 <b>%d 分鐘</b>。",
+        "set_default_interval_success_html": "預設的監視間隔已修改為 <b>%d 分鐘</b>。",
+        "set_interval_failure_too_small_html": "監視間隔必須大於 <b>%d 分鐘</b>。"
+    },
+    "l10n_cmd_set_hashtags": {
+        "cmd_set_hashtags_usage_prompt_html": "命令用法: <code>/set_hashtags 訂閲編號 #hashtag1 #hashtag2 …</code>\n\n注: 如果沒有 hashtag 提供，已存在的 hashtag 就會被清除 (僅當先前設置過才能清除，否則就會收到此提示) 。",
+        "set_hashtags_success_html": "訂閱的自定義 hashtag 已修改為: ",
+        "set_hashtags_success_cleared": "訂閱的自定義 hashtag 已清除。",
+        "set_hashtags_failure_too_many": "Hashtag 太多，請刪除一些后重試。"
     },
     "l10n_administration": {
         "cmd_test_usage_prompt_html": "命令用法: <code>/test RSS_URL 條目編號起點(可選) 條目編號終點(可選)</code>",
@@ -158,6 +187,7 @@
         "cmd_description_unsub_all": "退訂所有訂閲",
         "cmd_description_list": "查看訂閱清單",
         "cmd_description_set": "定制訂閲",
+        "cmd_description_set_default": "定制預設",
         "cmd_description_import": "從 OPML 檔匯入訂閱",
         "cmd_description_export": "將訂閱匯出到 OPML 檔",
         "cmd_description_activate_subs": "啟動訂閲",
@@ -167,21 +197,5 @@
         "cmd_description_help": "查看幫助",
         "cmd_description_test": "測試 (僅限機器人管理員)",
         "cmd_description_set_option": "設置機器人選項 (僅限機器人管理員)"
-    },
-    "l10n_cmd_set_title": {
-        "set_title_success_cleared": "訂閱的自定義標題已清除。",
-        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 訂閲編號 標題</code>\n\n注: 省略 <code>標題</code> 以清除自定義標題 (僅當先前設定過才能清除，否則就會收到此提示) 。",
-        "set_title_success": "訂閱的自定義標題已修改為: "
-    },
-    "l10n_cmd_set_interval": {
-        "set_interval_failure_too_small_html": "監視間隔必須大於 <b>%d 分鐘</b>。",
-        "set_interval_success_html": "訂閱的監視間隔已修改為 <b>%d 分鐘</b>。",
-        "cmd_set_interval_usage_prompt_html": "命令用法: <code>/set_interval 訂閲編號 監視間隔</code>\n\n注: <code>監視間隔</code> 必須是正整數，單位為分鐘 (無需包含單位) 。"
-    },
-    "l10n_cmd_set_hashtags": {
-        "cmd_set_hashtags_usage_prompt_html": "命令用法: <code>/set_hashtags 訂閲編號 #hashtag1 #hashtag2 …</code>\n\n注: 如果沒有 hashtag 提供，已存在的 hashtag 就會被清除 (僅當先前設定過才能清除，否則就會收到此提示) 。",
-        "set_hashtags_success_html": "訂閱的自定義 hashtag 已修改為: ",
-        "set_hashtags_success_cleared": "訂閱的自定義 hashtag 已清除。",
-        "set_hashtags_failure_too_many": "Hashtag 太多，請刪除一些后重試。"
     }
 }
