--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -116,20 +116,30 @@
         "style": "Style",
         "style_0": "RSStT",
         "style_1": "flowerss",
-        "set_custom_title_button": "Set the custom title…",
-        "set_custom_interval_button": "Set custom interval (in minutes)…",
-        "set_custom_hashtags_button": "Set custom hashtags…",
+        "set_custom_title_button": "Custom title…",
+        "set_custom_interval_button": "Custom interval (in minutes)…",
+        "set_custom_hashtags_button": "Custom hashtags…",
         "set_interval_prompt": "Please select a monitor interval.",
         "set_length_limit_prompt": "Please select a length limit.\n\nIf a post is longer than the limit OR cannot be sent in a single message, it will be sent via Telegraph.\nIf sending via Telegraph fails, only its title and source will be sent.",
         "length_limit_only_effective_if_send_mode_auto": "The length limit is effective only when send mode is auto.",
-        "display_media_only_effective_if_send_mode_auto_and_telegram": "The current send mode will never display media in Telegram messages."
+        "display_media_only_effective_if_send_mode_auto_and_telegram": "The current send mode will never display media in Telegram messages.",
+        "use_user_default_button": "Use my default"
+    },
+    "l10n_cmd_set_default": {
+        "set_user_default_description": "Set the default settings for subscriptions.\n\nThe unset settings of a subscription will fall back to the settings on this page. It is useful if you want to set the same settings for most of your subscriptions.",
+        "reset_all_button": "Reset all subscriptions to my default",
+        "reset_all_confirm_prompt": "Are you sure you want to reset all subscriptions to your default?",
+        "reset_all_confirm": "Yes, reset all subscriptions to my default",
+        "reset_all_cancel": "No, cancel",
+        "reset_all_successful": "Reset all subscriptions to default successfully"
     },
     "l10n_sub_info": {
         "subscription_info": "Subscription info",
         "feed_title": "Feed title",
         "subscription_title": "Custom title",
         "feed_url": "Feed URL",
-        "hashtags": "Hashtags"
+        "hashtags": "Hashtags",
+        "default_emoji_header_description": "%s means that the subscription is using your default settings. You can change them by using /set_default."
     },
     "l10n_monitor_warn": {
         "feed_deactivated_warn": "The monitoring task had failed 100 consecutive times. Your subscription to the RSS feed has been deactivated.\nTo reactivate it, please use the /activate_subs command."
@@ -152,6 +162,7 @@
     "l10n_cmd_set_interval": {
         "cmd_set_interval_usage_prompt_html": "Command usage: <code>/set_interval sub_id monitor_interval</code>\n\nNote: <code>monitor_interval</code> must be a positive integer in minutes (no need to include the unit).",
         "set_interval_success_html": "The monitor interval of the subscription has been changed to <b>%d minutes</b>.",
+        "set_default_interval_success_html": "The default monitor interval has been changed to <b>%d minutes</b>.",
         "set_interval_failure_too_small_html": "The monitor interval must be greater than <b>%d minutes</b>."
     },
     "l10n_cmd_set_hashtags": {
@@ -176,6 +187,7 @@
         "cmd_description_unsub_all": "Unsubscribe from all subscriptions",
         "cmd_description_list": "Check the subscription list",
         "cmd_description_set": "Customize subscriptions",
+        "cmd_description_set_default": "Customize default settings",
         "cmd_description_import": "Import subscriptions from an OPML file",
         "cmd_description_export": "Export subscriptions to an OPML file",
         "cmd_description_activate_subs": "Activate subscriptions",
