--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -33,22 +33,22 @@
         "permission_denied_not_in_private_chat": "此命令只可在私聊中使用。",
         "permission_denied_not_member": "你不在本群/频道里，不可以使用这个 bot。",
         "permission_denied_bot_not_member": "本 bot 已经不在本群/频道里，不会在此工作。",
-        "promote_to_admin_prompt": "如果你是本群组的匿名管理员，请将 bot 提升为管理员 (不需要任何权限)，这样 bot 才能验证你的身份。",
-        "group_upgrade_needed_prompt": "哎呀，你的群组还没有被升级为一个超级群组。通常，Telegram 的服务器会在某个时候自动完成这个升级，但如果没有的话，你就不得不在使用这个 bot 之前手动升级它。\n请按以下步骤操作: \n1. 转到群组信息，点击「管理群组」\n2. 将「历史记录对新成员」设置为「可见」\n3. 保存历史记录可见性设置\n4. 保存所有设置\n5. (可选) 如果需要的话，你可以将「历史记录对新成员」重新设置为「不可见」\n6. 现在你应该可以使用这个 bot 了",
-        "permission_denied_no_direct_use": "不应直接使用此命令。请改用 /set 。",
+        "permission_denied_switch_pm": "在和 bot 的私聊中继续…",
         "permission_denied_input_command": "请输入命令以继续…",
-        "permission_denied_switch_pm": "在和 bot 的私聊中继续…"
+        "permission_denied_no_direct_use": "不应直接使用此命令。请改用 /set 。",
+        "promote_to_admin_prompt": "如果你是本群组的匿名管理员，请将 bot 提升为管理员 (不需要任何权限)，这样 bot 才能验证你的身份。",
+        "group_upgrade_needed_prompt": "哎呀，你的群组还没有被升级为一个超级群组。通常，Telegram 的服务器会在某个时候自动完成这个升级，但如果没有的话，你就不得不在使用这个 bot 之前手动升级它。\n请按以下步骤操作: \n1. 转到群组信息，点击「管理群组」\n2. 将「历史记录对新成员」设置为「可见」\n3. 保存历史记录可见性设置\n4. 保存所有设置\n5. (可选) 如果需要的话，你可以将「历史记录对新成员」重新设置为「不可见」\n6. 现在你应该可以使用这个 bot 了"
     },
     "l10n_misc": {
         "choose_sub_prompt": "请选择订阅",
         "previous_page": "上一页",
         "next_page": "下一页",
         "back": "返回",
+        "cancel": "取消",
         "subscribe": "添加订阅",
         "unsubscribe": "退订订阅",
         "subscription_list": "订阅列表",
         "processing": "正在处理中，请稍候…",
-        "cancel": "取消",
         "canceled_by_user": "被用户取消。",
         "n_subscriptions_in_total": "总共 %d 个订阅",
         "other_settings_button": "其他设置…"
@@ -63,6 +63,12 @@
         "unsub_choose_sub_prompt_html": "请选择要退订的订阅。\n或者，你也可以使用 <code>/unsub url1 url2 url3 …</code> 来批量退订。",
         "unsub_successful": "退订成功",
         "unsub_failed": "退订失败"
+    },
+    "l10n_cmd_unsub_all": {
+        "unsub_all_confirm_prompt": "你确定要退订所有订阅吗？",
+        "unsub_all_confirm": "是的，退订所有订阅",
+        "unsub_all_cancel": "不，取消",
+        "unsub_all_successful": "已成功退订所有订阅"
     },
     "l10n_cmd_import": {
         "send_opml_prompt": "请发送需要导入的 OPML 文件 (扩展名必须为 .opml)。",
@@ -82,48 +88,58 @@
         "notification_normal": "正常",
         "notification_muted": "静音",
         "monitor_interval": "检查间隔",
-        "set_interval_prompt": "请选择检查间隔。",
-        "link_preview_0": "自动",
-        "link_preview_1": "强制启用",
-        "display_title": "显示标题",
-        "display_title_-1": "禁用",
-        "display_title_0": "自动",
-        "send_mode_-1": "仅标题和来源",
-        "display_author": "显示作者",
         "send_mode": "发送方式",
-        "length_limit": "长度限制 (仅限自动模式)",
+        "send_mode_-1": "仅标题和来源",
         "send_mode_0": "自动",
-        "length_limit_unlimited": "无限制",
-        "link_preview": "链接预览",
         "send_mode_1": "强制 Telegragh",
         "send_mode_2": "强制 Telegram 消息",
-        "set_custom_title_button": "自定义标题…",
-        "set_custom_hashtags_button": "自定义 hashtag…",
-        "display_author_-1": "禁用",
-        "display_author_1": "强制启用",
-        "display_via": "显示来源",
-        "display_author_0": "自动",
-        "display_via_-2": "完全禁用",
-        "display_title_1": "强制启用",
-        "style": "风格",
-        "length_limit_only_effective_if_send_mode_auto": "长度限制仅在发送方式为自动时有效。",
-        "set_length_limit_prompt": "请选择长度限制。\n\n如果文章的长度超过限制或无法以单条信息发送，则将经由 Telegraph 发送。\n如果经由 Telegraph 发送失败，则将只发送其标题和来源。",
-        "display_via_-1": "仅链接 (隐藏源标题)",
-        "display_via_0": "自动 (链接显示为源标题)",
-        "style_0": "",
-        "style_1": "",
-        "set_custom_interval_button": "自定义间隔 (以分钟为单位)…",
+        "length_limit": "长度限制 (仅限自动模式)",
+        "length_limit_unlimited": "无限制",
+        "link_preview": "链接预览",
+        "link_preview_0": "自动",
+        "link_preview_1": "强制启用",
         "display_media": "显示媒体",
         "display_media_-1": "禁用",
         "display_media_0": "启用",
-        "display_media_only_effective_if_send_mode_auto_and_telegram": "目前的发送方式永远不在 Telegram 消息里显示媒体。"
+        "display_author": "显示作者",
+        "display_author_-1": "禁用",
+        "display_author_0": "自动",
+        "display_author_1": "强制启用",
+        "display_via": "显示来源",
+        "display_via_-2": "完全禁用",
+        "display_via_-1": "仅链接 (隐藏源标题)",
+        "display_via_0": "自动 (链接显示为源标题)",
+        "display_title": "显示标题",
+        "display_title_-1": "禁用",
+        "display_title_0": "自动",
+        "display_title_1": "强制启用",
+        "style": "风格",
+        "style_0": "",
+        "style_1": "",
+        "set_custom_title_button": "自定义标题…",
+        "set_custom_interval_button": "自定义间隔 (以分钟为单位)…",
+        "set_custom_hashtags_button": "自定义 hashtag…",
+        "set_interval_prompt": "请选择检查间隔。",
+        "set_length_limit_prompt": "请选择长度限制。\n\n如果文章的长度超过限制或无法以单条信息发送，则将经由 Telegraph 发送。\n如果经由 Telegraph 发送失败，则将只发送其标题和来源。",
+        "length_limit_only_effective_if_send_mode_auto": "长度限制仅在发送方式为自动时有效。",
+        "display_media_only_effective_if_send_mode_auto_and_telegram": "目前的发送方式永远不在 Telegram 消息里显示媒体。",
+        "use_user_default_button": "使用我的默认值"
+    },
+    "l10n_cmd_set_default": {
+        "set_user_default_description": "为订阅设置默认设置。\n\n订阅中缺少的设置将回落到本页的设置。如果你想对你的大部分订阅都应用一样的设置，这很有用。",
+        "reset_all_button": "重置所有订阅到默认值",
+        "reset_all_confirm_prompt": "你确定要重置所有订阅到默认值吗？",
+        "reset_all_confirm": "是的，重置所有订阅到默认值",
+        "reset_all_cancel": "不，取消",
+        "reset_all_successful": "已成功重置所有订阅到默认值"
     },
     "l10n_sub_info": {
         "subscription_info": "订阅信息",
+        "feed_title": "源标题",
         "subscription_title": "自定义标题",
         "feed_url": "源 URL",
-        "feed_title": "源标题",
-        "hashtags": "Hashtag"
+        "hashtags": "Hashtag",
+        "default_emoji_header_description": "%s 意味着订阅正使用你的默认设置。你可以使用 /set_default 来修改它们。"
     },
     "l10n_monitor_warn": {
         "feed_deactivated_warn": "检查任务已经连续失败 100 次，对该 RSS 源的订阅已被停用。\n若要重新启用，请使用 /activate_subs 命令。"
@@ -137,6 +153,23 @@
         "choose_sub_to_be_deactivated": "以下订阅处于启用状态，请选择你需要停用的订阅。\n停用后，会暂停监控订阅更新；如果您永远不再需要这个订阅，请考虑退订而不是停用它。",
         "deactivate_all_subs": "停用我的所有订阅",
         "all_subs_are_deactivated": "所有订阅都已停用。"
+    },
+    "l10n_cmd_set_title": {
+        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 订阅编号 标题</code>\n\n注: 省略 <code>标题</code> 以清除自定义标题 (只有以前设置过才可以清除，否则会收到此提示) 。",
+        "set_title_success": "订阅的自定义标题已更改为: ",
+        "set_title_success_cleared": "订阅的自定义标题已清除。"
+    },
+    "l10n_cmd_set_interval": {
+        "cmd_set_interval_usage_prompt_html": "命令用法: <code>/set_interval 订阅编号 监视间隔</code>\n\n注: <code>监视间隔</code> 必须是以分钟为单位的正整数 (不包含单位) 。",
+        "set_interval_success_html": "订阅的监视间隔已更改为 <b>%d 分钟</b>。",
+        "set_default_interval_success_html": "默认监视间隔已更改为 <b>%d 分钟</b>。",
+        "set_interval_failure_too_small_html": "监视间隔必须大于 <b>%d 分钟</b>。"
+    },
+    "l10n_cmd_set_hashtags": {
+        "cmd_set_hashtags_usage_prompt_html": "命令用法: <code>/set_hashtags 订阅编号 #hashtag1 #hashtag2 …</code>\n\n注: 如果不提供 hashtag, 已有的 hashtag 就会被清除 (只有以前设置过才可以清除，否则会收到此提示) 。",
+        "set_hashtags_success_html": "订阅的自定义 hashtag 已更改为: ",
+        "set_hashtags_success_cleared": "订阅的自定义 hashtag 已清除。",
+        "set_hashtags_failure_too_many": "Hashtag 太多，请移除一些后重试。"
     },
     "l10n_administration": {
         "cmd_test_usage_prompt_html": "命令用法: <code>/test RSS_URL 条目编号起点(可选) 条目编号终点(可选)</code>",
@@ -154,6 +187,7 @@
         "cmd_description_unsub_all": "退订所有订阅",
         "cmd_description_list": "列出订阅列表",
         "cmd_description_set": "自定义订阅设置",
+        "cmd_description_set_default": "自定义默认设置",
         "cmd_description_import": "从 OPML 导入订阅",
         "cmd_description_export": "导出订阅到 OPML",
         "cmd_description_activate_subs": "启用订阅",
@@ -163,27 +197,5 @@
         "cmd_description_help": "查看帮助",
         "cmd_description_test": "测试 (仅 bot 管理员)",
         "cmd_description_set_option": "更改 bot 配置 (仅 bot 管理员)"
-    },
-    "l10n_cmd_unsub_all": {
-        "unsub_all_successful": "已成功退订所有订阅",
-        "unsub_all_confirm_prompt": "你确定要退订所有订阅吗？",
-        "unsub_all_confirm": "是的，退订所有订阅",
-        "unsub_all_cancel": "不，取消"
-    },
-    "l10n_cmd_set_interval": {
-        "set_interval_failure_too_small_html": "监视间隔必须大于 <b>%d 分钟</b>。",
-        "set_interval_success_html": "订阅的监视间隔已更改为 <b>%d 分钟</b>。",
-        "cmd_set_interval_usage_prompt_html": "命令用法: <code>/set_interval 订阅编号 监视间隔</code>\n\n注: <code>监视间隔</code> 必须是以分钟为单位的正整数 (不包含单位) 。"
-    },
-    "l10n_cmd_set_title": {
-        "set_title_success": "订阅的自定义标题已更改为: ",
-        "set_title_success_cleared": "订阅的自定义标题已清除。",
-        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 订阅编号 标题</code>\n\n注: 省略 <code>标题</code> 以清除自定义标题 (只有以前设置过才可以清除，否则会收到此提示) 。"
-    },
-    "l10n_cmd_set_hashtags": {
-        "cmd_set_hashtags_usage_prompt_html": "命令用法: <code>/set_hashtags 订阅编号 #hashtag1 #hashtag2 …</code>\n\n注: 如果不提供 hashtag, 已有的 hashtag 就会被清除 (只有以前设置过才可以清除，否则会收到此提示) 。",
-        "set_hashtags_success_html": "订阅的自定义 hashtag 已更改为: ",
-        "set_hashtags_success_cleared": "订阅的自定义 hashtag 已清除。",
-        "set_hashtags_failure_too_many": "Hashtag 太多，请移除一些后重试。"
     }
 }
